examples/test/testpolicy5526.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5526
  namespace: namespace193
spec:
  podSelector:
    matchLabels:
      key29: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value37
      podSelector:
        matchLabels:
          key9: value11
          key23: value10
          key11: value30
